--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="row">       
-          <app-calculadora-grados></app-calculadora-grados>
+          <app-multiplicacion-ax-b></app-multiplicacion-ax-b>
         </div>
     </div>
   </body>
